# shiori-web

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yaml
.devcontainer/: compose.override.yaml  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/workflows/: ci.yml  docker-push.yml
backend/: Cargo.toml
backend/crates/main/: Cargo.toml
backend/crates/main/src/: env.rs  extractor.rs  main.rs  router.rs
backend/crates/main/src/auth/: client.rs
backend/crates/main/src/extractor/: real_oidc_client.rs
backend/crates/main/src/router/: auth.rs  root.rs
backend/crates/main/src/router/auth/: callback.rs  login.rs
crates/cli/: Cargo.toml
crates/cli/src/: loopback.rs  main.rs  oidc.rs  token_store.rs
crates/entities/: Cargo.toml
crates/entities/src/: date_time.rs  lib.rs  user.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: entities.rs  lib.rs  read_models.rs  use_cases.rs
crates/kernel/src/entities/: bookmark.rs  bookmark_id.rs  color_scheme.rs  comment.rs  date_time.rs  google_user_id.rs  share_url.rs  title.rs  url.rs  user.rs  user_id.rs  user_settings.rs  utc_offset.rs
crates/kernel/src/read_models/: bookmark_list.rs  bookmark_view.rs  page_token.rs  user_settings_view.rs
crates/kernel/src/use_cases/: bookmark_reader.rs  bookmark_repository.rs  user_repository.rs  user_settings_reader.rs  user_settings_repository.rs
crates/main/: Cargo.toml  build.rs
crates/main/assets/: index.css
crates/main/src/: cli.rs  cookie.rs  cookie_jar.rs  env.rs  extractor.rs  firestore.rs  main.rs  model.rs  oidc.rs  router.rs  state.rs  test_helpers.rs  user.rs
crates/main/src/extractor/: client.rs  real_oidc_client.rs
crates/main/src/firestore/: bookmark_document_data.rs  bookmark_reader.rs  bookmark_repository.rs  collection.rs  document.rs  google_user_id_document_data.rs  user_document_data.rs  user_repository.rs  user_settings_document_data.rs  user_settings_reader.rs  user_settings_repository.rs
crates/main/src/firestore/collection/: bookmarks.rs  google_user_ids.rs  user_settings.rs  users.rs
crates/main/src/model/: bookmark.rs  bookmark_document_data.rs  bookmark_reader.rs  date_time.rs  firestore_path.rs  google_user_id_document_data.rs  user.rs  user_id.rs
crates/main/src/oidc/: authorization_code_client.rs  id_token_verifier.rs  real_authorization_code_client.rs  real_id_token_verifier.rs
crates/main/src/router/: auth.rs  bookmark.rs  export.rs  favicon.rs  index_css.rs  root.rs  settings.rs  shiori_svg.rs
crates/main/src/router/auth/: callback.rs  login.rs  signin.rs  signout.rs  signup.rs
crates/main/templates/: _page_header.html  bookmark.html  bookmarks.html  delete.html  edit_bookmark.html  header_menu.html  landing.html  list.html  new.html  new_bookmark.html  settings.html  show.html
crates/use_cases/: Cargo.toml
crates/use_cases/src/: lib.rs  user_repository.rs
firebase/: Dockerfile  firebase.json
