[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[package]
edition.workspace = true
name = "cli"
publish.workspace = true
version.workspace = true

[[bin]]
name = "shiori"
path = "src/main.rs"

[lints]
workspace = true
