[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3"

[package]
edition.workspace = true
name = "cli"
publish.workspace = true
version.workspace = true

[[bin]]
name = "shiori"
path = "src/main.rs"

[lints]
workspace = true
