[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
openidconnect = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"

[dev-dependencies]
tempfile = "3"

[package]
edition.workspace = true
name = "cli"
publish.workspace = true
version.workspace = true

[[bin]]
name = "shiori"
path = "src/main.rs"

[lints]
workspace = true
