[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-signed"] }
openidconnect = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
temp-env = "0.3"
tower = { version = "0.5", features = ["util"] }

[package]
edition.workspace = true
name = "main"
publish.workspace = true
