[dependencies]
anyhow = "1"
askama = "0.12"
async-trait = "0.1.89"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-signed"] }
bouzuya-firestore-client = { git = "https://github.com/bouzuya/bouzuya-firestore-client", tag = "2.0.0" }
chrono = "0.4"
kernel = { path = "../kernel" }
openidconnect = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
serde_urlencoded = "0.7"
serial_test = "3"
temp-env = "0.3"
tower = { version = "0.5", features = ["util"] }

[package]
edition.workspace = true
name = "main"
publish.workspace = true
