[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
http-body-util = "0.1"
temp-env = "0.3"
tower = { version = "0.5", features = ["util"] }

[package]
edition.workspace = true
name = "main"
publish.workspace = true
